# generative-ai

./: readme.md
00_foundations/: readme.md
00_foundations/00_genai_foundations/: readme.md
00_foundations/00_genai_foundations/00_neural_networks/: readme.md
00_foundations/00_genai_foundations/01_descriminative_ai/: readme.md
00_foundations/00_genai_foundations/02_generative_ai/: readme.md
00_foundations/00_genai_foundations/02_generative_ai/01_gans/: readme.md
00_foundations/00_genai_foundations/02_generative_ai/02_deffuser/: readme.md
00_foundations/00_genai_foundations/02_generative_ai/03_transformers/: readme.md
00_foundations/02_prompt_engineering/: readme.md
00_foundations/02_prompt_engineering/01_reasoners_prompt_engineering/: readme.md
00_foundations/02_prompt_engineering/03_fixing_prompts/: readme.md
00_foundations/02_prompt_engineering/04_reverse_metaprompting/: readme.md
00_foundations/02_prompt_engineering/05_metaprompting_for_ai_agents/: readme.md
00_foundations/02_prompt_engineering/07_read_ai_mind_with_metaprompting/: readme.md
00_foundations/02_prompt_engineering/09_prompt_marketplace/: readme.md
00_foundations/02_prompt_engineering/11_ultimate_2025_guide/: readme.md
01_langchain/: README.md
01_langchain/01_langchain-playground/: pyproject.toml
01_langchain/03_multiple_llms/: readme.md
01_langchain/03_multiple_llms/01_mistralai/app/: chatbot.ipynb
02_RAG/: README.md
02_RAG/chromadb/app/: 02_retrieval-pitfalls.ipynb  03_query_expansion.ipynb  06_other_techniques.md
02_RAG/pinecone/: .env.example  pyproject.toml
02_RAG/pinecone/app/: 01_rag.ipynb  02_recommender.ipynb  03_chatbot.py  04_hybrid_search.ipynb  05_facial_similarity.ipynb
03_RAG/pinecone/app/: main.py  rag.ipynb
03_fine_tuning/: readme.md
03_knowledge_graphs/: readme.md
03_projects/: README.md
03_projects/01_Application_Tracking_System(ATS)/: pyproject.toml
03_projects/01_Application_Tracking_System(ATS)/app/: main.py
03_projects/01_Application_Tracking_System(ATS)/app/db/: config.py
03_projects/01_Application_Tracking_System(ATS)/app/services/: chatbot.py
03_projects/01_coding_assistant/: pyproject.toml
03_projects/02_Application_Tracking_System(ATS)/app/: main.py
03_projects/02_Application_Tracking_System(ATS)/app/db/: config.py
03_projects/02_Application_Tracking_System(ATS)/app/services/: chatbot.py  retrieval.py
03_projects/02_coding_assistant/: modelfile
03_projects/02_coding_assistant/app/: main.py
03_projects/04_Application_Tracking_System(ATS)/app/: main.py
03_projects/04_Application_Tracking_System(ATS)/app/services/: chatbot.py  retrieval.py
04_fine_tuning/: readme.md
05_mcp_servers/: readme.md
RAG/chromadb/: .env  pyproject.toml
RAG/chromadb/app/: 02_retrieval-pitfalls.ipynb  04_cross_encoder.ipynb  05_embedding_adaptors.ipynb  based.ipynb
projects/: README.md
