[tool.poetry]
name = "pinecone-rag"
version = "0.1.0"
description = ""
authors = ["MuhammadAhsaanAbbasi <mahsaanabbasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"# Adjusted version constraint
langchain-pinecone = { version = "^0.2.0", markers = "python_version < '3.13'" }
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
langchain-groq = "^0.2.3"
pinecone-text = "^0.9.0"
pinecone-notebooks = "^0.1.1"
pinecone-client = "^5.0.1"
streamlit = "^1.42.0"
langchain-community = "^0.3.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
