[project]
name = "01_application_tracking_system"
version = "0.1.0"
description = ""
authors = [
    {name = "MuhammadAhsaanAbbasi",email = "mahsaanabbasi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "langchain-core (>=0.3.29,<0.4.0)",
    "langchain-google-genai (>=2.0.8,<3.0.0)",
    "pinecone (>=5.4.2,<6.0.0)",
    "langchain-pinecone (>=0.2.2,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
