[project]
name = "01-coding-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "MuhammadAhsaanAbbasi",email = "mahsaanabbasi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-core (>=0.3.31,<0.4.0)",
    "gradio (>=5.12.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
